<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Irko Key</string>
    <string name="intoduce_data">Enter your Email and Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="submit">Submit</string>
    <string name="empty_pin">PIN cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="no_results">No results found.</string>
    <string name="password_copied">Password copied to clipboard.</string>
    <string name="password_saved">Pasword saved</string>
    <string name="password_not_strong">Password is not strong enough.</string>
    <string name="fill_fields">Please fill all fields</string>
    <string name="main_screen">This is the main screen</string>
    <string name="user_login_instructions">You need to login</string>
    <string name="logout">Logout</string>
    <string name="logout_info">You\'re about to Logout</string>
    <string name="save">Save</string>
    <string name="symbols">have symbols.</string>
    <string name="numbers">have numbers.</string>
    <string name="capital_letters">have capital letters.</string>
    <string name="lowercase_letters">have lowercase letters.</string>
    <string name="have_lenght">have at least 12 characters.</string>
    <string name="your_password">Your password must:</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="new_password">New Password</string>
    <string name="security_warning">Security Warning!!!</string>
    <string name="copy_warning_message">Make sure to erase the password from the clipboard after use it!</string>
    <string name="got_it">Got it!</string>
    <string name="your_passwords">Your Passwords</string>
    <string name="edit">Edit Password</string>
    <string name="favorite">Add to Favorites</string>
    <string name="delete">Delete Password</string>
    <string name="updated">Password updated!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Are you sure you want to delete this password?</string>
    <string name="copy_password">Copy Password</string>
    <string name="generate_password">Generate Password</string>
    <string name="choice">Or if you prefer, you can get an automatic generated password: </string>
    <string name="wellcome">Wellcome to IrkoKey</string>
    <string name="need_register">You need to register!</string>
    <string name="introduce_email">Please, introduce your email</string>
    <string name="introduce_pin_register">Please, now introduce an 6 digit pin. You\'ll need to remember this for login!!!</string>
    <string name="confirm_pin">Please, confirm your pin</string>
    <string name="pin">Pin</string>
    <string name="confirm_pin_hint">Confirm Pin</string>
    <string name="register">Register</string>
    <string name="edit_hint">New Password</string>
    <string name="backup">Backup</string>
    <string name="can_import_export">Here you can import and export your data</string>
    <string name="choose">What would you like to do?</string>
    <string name="choice_import">Import</string>
    <string name="choice_export">Export</string>
    <string name="need_pin">You need your pin to import or export your data.</string>
    <string name="choose_folder">Your data will be saved in a folder of your choice.</string>
    <string name="take_care_data">Be careful with your data!!! Save it in a safe place.</string>
    <string name="do_not_change_name">Make sure that the name of the file is irkokey.json, or you won\'t be able to import it.</string>
    <string name="do_not_share_data">Don\'t share your data with anyone. Remember that your data is your responsibility.</string>
    <string name="passwords">Passwords</string>
    <string name="user_registered">User registered!</string>
    <string name="wrong">Wrong email or password.</string>
    <string name="check_again">Wrong email or pin. Please check!</string>
    <string name="login_success">Login successful.</string>
    <string name="title_favorite">Favorite</string>
    <string name="importing_process">Correct PIN, importing data…</string>
    <string name="exporting_process">Correct PIN, exporting data…</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="imported">Backup imported</string>
    <string name="exported">Backup exported</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="search_password">Search password</string>
    <string name="careful">When you import your backup, your current data will be replaced. Be careful!</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
</resources>